--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,10 @@ deploy:docker:
   # Add to the deploying stage.
   stage: deploy
   rules:
-    # Only deploy on the "master" branch.
+    # Deploy if on the "master" branch.
     - if: '$CI_COMMIT_BRANCH == "master"'
+    # Deploy if on a tag.
+    - if: $CI_COMMIT_TAG
   variables:
     # Don't clone or fetch the Git repo, as the dependencies are all that's needed here.
     GIT_STRATEGY: none
