--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-# define the Docker in Docker anchor.
+# Define the Docker in Docker anchor.
 .dind: &dind
   variables:
     # Set the Docker host to the network connection to the dind service instead of the usual socket.
@@ -87,6 +87,7 @@ build:docker:
 
 # Define the Docker deploy job.
 deploy:docker:
+  <<: *dind
   # Add to the deploying stage.
   stage: deploy
   rules:
