--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
   variables:
     # Set the Docker host to the network connection to the dind service instead of the usual socket.
     DOCKER_HOST: tcp://docker:2375/
-  # Use the latest official Docker image.
+  # Run in the official Docker image.
   image: docker
   services:
     # Enable the Docker service.
@@ -18,87 +18,112 @@ stages:
   # Create an app package deploying stage.
   - deploy
 
-# Define the editorconfig-checker job.
 analysis:ec:
+  # Add to the analysis stage.
   stage: analyze
   # Use the latest ec Docker image.
   image: mstruebing/editorconfig-checker:latest
-  script:
-    # Check that all text complies with the EditorConfig file.
-    - ec
+  # Check that all text complies with the EditorConfig file.
+  script: ec
 
-# Define the shfmt job.
 analysis:shfmt:
+  # Add to the analysis stage.
   stage: analyze
-  rules:
-    - changes:
-        - CI/**/*.sh
   # Use the latest Alpine Linux shfmt Docker image.
   image: mvdan/shfmt:latest-alpine
-  script:
-    # Check that all Bash code has proper formatting.
-    - shfmt -d CI
+  rules:
+    - changes:
+        # Watch for changes in the CI scripts.
+        - "CI/**/*.sh"
+  # Check that all Bash code has proper formatting.
+  script: shfmt -d .
 
-# Define the ShellCheck job.
 analysis:shellcheck:
+  # Add to the analysis stage.
   stage: analyze
-  rules:
-    - changes:
-        - CI/**/*.sh
-  # Use the latest stable shellcheck Docker image.
+  # Use the latest stable ShellCheck Docker image.
   image: koalaman/shellcheck-alpine:stable
-  script:
-    # Check that all Bash code is proper.
-    - shellcheck -x CI/**/*.sh
-
-# Define the ESLint linting job.
-analysis:eslint:
-  stage: analyze
   rules:
     - changes:
-        - Source/*.js
-        - Source/**/*.js
-  cache:
-    paths:
-      # Cache the NPM dependencies.
-      - .npm/
-  # Use the latest official Node image.
-  image: node:latest
-  before_script:
-    # Install the NPM dependencies.
-    - npm ci --cache .npm --prefer-offline
-  script:
-    # Check that all JavaScript code is proper.
-    - npm run lint
+        # Watch for changes in the CI scripts.
+        - "CI/**/*.sh"
+  # Check that all Bash code is proper.
+  script: shellcheck -x *.sh
 
-# Define the Docker build job.
-build:docker:
+# Define the Docker image building anchor. Since there's already a Docker in Docker anchor, this
+# should only define elements needed for building.
+.build:docker: &docker_build
   <<: *dind
+  # Any Docker image building will be a part of the package building stage, so add it.
   stage: build
+  artifacts:
+    # Save the built image.
+    paths: [Build/]
+  # Run the Docker build script.
+  script: CI/build.sh
+
+# Define the Docker AMD64 image building job.
+build:docker:amd64:
+  <<: *docker_build
   variables:
     # Set the target architecture to AMD64. This will be able to run on most desktop platforms.
     TARGET_ARCH: amd64
-  # Run the Docker build script.
-  script: CI/Build/Docker.sh
-  artifacts:
-    paths:
-      # Save the built image.
-      - Build/
 
-# Define the Docker deploy job.
-deploy:docker:
+# Define the Docker ARMv7 image building job.
+build:docker:arm32v7:
+  <<: *docker_build
+  variables:
+    # Set the target architecture to ARMv7 32 bit. This will be able to run on some embedded
+    # platforms, such as the Raspberry Pi 2 v1.1 model.
+    TARGET_ARCH: arm32v7
+
+# Define the Docker ARMv8 image building job.
+build:docker:arm64v8:
+  <<: *docker_build
+  variables:
+    # Set the target architecture to ARMv8 64 bit. This will be able to run on some embedded
+    # platforms, such as the Raspberry Pi 2 v1.2 model and the Raspberry Pi 3 models.
+    TARGET_ARCH: arm64v8
+
+# Define the Docker image deploying anchor.
+.deploy:docker: &docker_deploy
   <<: *dind
   # Add to the deploying stage.
   stage: deploy
-  rules:
-    # Deploy if on the "master" branch.
-    - if: '$CI_COMMIT_BRANCH == "master"'
-    # Deploy if on a tag.
-    - if: $CI_COMMIT_TAG
   variables:
-    TARGET_ARCH: amd64
-  dependencies:
-    # Fetch the image from the build job.
-    - build:docker
+    # Don't clone or fetch the Git repo, as the dependencies are all that's needed here.
+    GIT_STRATEGY: none
+  only:
+    # Only deploy on the "master" branch.
+    - master
+    # Make sure tags are deployed.
+    - tags
   # Run the deploying script.
-  script: CI/Deploy/Docker.sh
+  script: ./CI/deploy.sh
+
+# Define the Docker AMD64 image deploying job.
+deploy:docker:amd64:
+  <<: *docker_deploy
+  variables:
+    # Set the target architecture to AMD64. This will be able to run on most desktop platforms.
+    TARGET_ARCH: amd64
+  # Require the AMD64 build job.
+  needs: ["build:docker:amd64"]
+
+# Define the Docker ARMv7 image deploying job.
+deploy:docker:arm32v7:
+  <<: *docker_deploy
+  variables:
+    # Set the target architecture to ARMv7 32 bit.
+    TARGET_ARCH: arm32v7
+  # Require the ARMv7 build job.
+  needs: ["build:docker:arm32v7"]
+
+# Define the Docker ARMv8 image deploying job.
+deploy:docker:arm64v8:
+  <<: *docker_deploy
+  variables:
+    # Set the target architecture to ARMv8.
+    TARGET_ARCH: arm64v8
+  # Require the ARMv8 build job.
+  needs: ["build:docker:arm64v8"]
