--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ analysis:shellcheck:
         # Watch for changes in the CI scripts.
         - "CI/**/*.sh"
   # Check that all Bash code is proper.
-  script: shellcheck -x *.sh
+  script: shellcheck -x **/*.sh
 
 # Define the Docker image building anchor. Since there's already a Docker in Docker anchor, this
 # should only define elements needed for building.
