--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "bugs": "https://gitlab.com/CodingKoopa/lionbot/issues",
   "license": "GPL-2.0",
   "author": {
-    "name": "Kyle Loerker",
-    "email": "kyleloerker@gmail.com"
+    "name": "Lucy Loerker",
+    "email": "lucyloerker@gmail.com"
   },
   "repository": "gitlab:CodingKoopa/lionbot",
   "scripts": {
