gitignore: accomodate more extensions

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Don't commit downloaded Node.js dependencies.
 node_modules
 # Don't commit the environment variable file.
-.env
+.env*
 # Don't commit the Google OAuth credentials.
-GoogleOAuthCredentials.json
+GoogleOAuthCredentials.json*
 # Don't commit the Google OAuth token.
-GoogleOAuthToken.json
+GoogleOAuthToken.json*
